# artistkashi

./: .gitignore  .pre-commit-config.docker.yaml  .pre-commit-config.yaml  ArtistKashi API.postman_collection.json  ArtistKashi_Postman_Collection.json  Makefile  README.md  docker-compose.yml  prod-backend-deploy.yml  prod-frontend-deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  ROUTES.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  start.sh  vercel.json  watcher.py
backend/alembic_migrations/versions/: 30d267f5e721_initialize_tables.py  407a1aaa163b_small_update_in_the_usersession.py  6a0a018f831b_small_update_in_the_usersession.py  a1b2c3d4e5f6_add_user_profile_and_address.py  b7c8d9e0f1a2_user_role_enum.py  e91badb52896_add_image_source_type.py  fc040304cc7a_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  addresses.py  auth.py  cart.py  courses.py  health.py  products.py  reviews.py  test.py  users.py  wishlist.py
backend/app/api/v1/admin/: __init__.py  courses.py  dashboard.py  products.py  reviews.py  site_config.py  users.py
backend/app/auth/: __init__.py  password_policy.py  users.py
backend/app/core/: __init__.py  cache.py  config.py  db.py  error_handler.py  exceptions.py  health.py  logger.py  pagination.py  queue.py  schema.py  setup.py
backend/app/core/auth/: __init__.py  dependencies.py  password_policy.py  security.py  users.py
backend/app/crud/: __init__.py  address.py  base.py  cart.py  course.py  product.py  review.py  site_config.py  user.py  wishlist.py
backend/app/database/: __init__.py
backend/app/middleware/: performance.py  request_id.py  response.py  trailing_slash.py
backend/app/models/: __init__.py  address.py  base.py  cart.py  course.py  product.py  review.py  site_config.py  testimonial.py  user.py  user_session.py  wishlist.py
backend/app/routes/: addresses.py  admin.py  courses.py  items.py  products.py  test.py  users.py
backend/app/schemas/: __init__.py  address.py  auth.py  cart.py  course.py  health.py  product.py  responses.py  review.py  site_config.py  user.py  user_session.py  wishlist.py
backend/app/services/: address_service.py  auth_service.py  cloudflare_service.py  email.py  product_service.py  user_service.py
backend/app/services/email/: email.py
backend/app/utils/: __init__.py
backend/commands/: create_admin.py  create_home_page.py  generate_openapi_schema.py  seed_reviews.py
backend/tests/: conftest.py  test_complete_flow.py  test_database.py  test_email.py
backend/tests/commands/: test_create_admin.py  test_generate_openapi_schema.py
backend/tests/core/: test_health.py
backend/tests/main/: test_error_handler.py  test_main.py  test_response_wrapper.py
backend/tests/routes/: test_auth.py
backend/tests/utils/: test_utils.py
(+157 files in other folders)
