[project]
name = "artistkashi-backend"
version = "0.1.0"
description = "ArtistKashi cinematic luxury LMS + commerce backend"
authors = [{ name = "ArtistKashi" }]

requires-python = ">=3.12,<3.14"

readme = "README.md"

dependencies = [
    "fastapi[standard]>=0.136.0",

    "asyncpg>=0.30.0",

    "fastapi-users[sqlalchemy]>=14.0.1",

    "pydantic-settings>=2.10.1",

    "fastapi-mail>=1.5.0",

    "fastapi-pagination>=0.13.3"
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",

    "ruff>=0.15.0",

    "watchdog>=6.0.0",

    "python-dotenv>=1.1.0",

    "pytest>=9.0.0",

    "pytest-mock>=3.14.1",

    "pytest-asyncio>=1.0.0",

    "mypy>=1.15.0",

    "coveralls>=4.0.1",

    "alembic>=1.15.2",

    "mkdocs-material>=9.6.12",

    "mkdocs-material[imaging]>=9.6.12"
]

[tool.uv]
package = false

[tool.hatch.build.targets.sdist]
include = ["commands"]

[tool.hatch.build.targets.wheel]
include = ["commands"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"