[project]
name = "artistkashi-backend"
version = "0.1.0"
description = "ArtistKashi cinematic luxury LMS + commerce backend"
authors = [{ name = "ArtistKashi" }]

requires-python = ">=3.12,<3.14"

readme = "README.md"

dependencies = [
    # FastAPI stack
    "fastapi[standard]>=0.136.3",
    "uvicorn[standard]>=0.27.0",
    "uvloop>=0.19.0",
    "httptools>=0.6.1",
    
    # Database
    "asyncpg>=0.31.0",
    "SQLAlchemy>=2.0.25",
    "sqlalchemy-utils>=0.41.1",
    "alembic>=1.18.4",
    "greenlet>=2.0.2",
    
    # Auth & security
    "fastapi-users[sqlalchemy]>=15.0.5",
    "python-jose>=3.3.0",
    "bcrypt>=4.1.1",
    "python-multipart>=0.0.9",
    
    # Config & validation
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.6.1",
    
    # Utilities
    "fastapi-mail>=1.6.4",
    "fastapi-pagination>=0.15.13",
    "python-dotenv>=1.2.2",
    
    # CRUD & Admin
    "fastcrud>=0.21.0",
    "crudadmin>=0.4.2",
    
    # Cache & background jobs
    "redis>=5.0.1",
    "arq>=0.25.0",
    
    # HTTP client
    "httpx>=0.26.0"
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.14",
    "watchdog>=6.0.0",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "mypy>=2.1.0",
    "coveralls>=4.1.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-material[imaging]>=9.7.6"
]

[tool.uv]
package = false

[tool.hatch.build.targets.sdist]
include = ["commands"]

[tool.hatch.build.targets.wheel]
include = ["commands"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.watchfiles]
ignore_paths = [
    "**/__pycache__",
    "**/*.pyc", 
    "**/.mypy_cache",
    "**/logs",
    "**/watcher.py",
]